# ChoutenKMP

./: README.md  settings.gradle.kts
backdrop/: build.gradle.kts
composeApp/: build.gradle.kts
composeApp/src/androidMain/: AndroidManifest.xml
composeApp/src/androidMain/kotlin/com/inumaki/chouten/: MainActivity.kt
composeApp/src/commonMain/kotlin/com/inumaki/chouten/: App.kt  ChangelogScreen.kt  SplashScreen.kt
composeApp/src/commonMain/kotlin/com/inumaki/chouten/common/: FeaturesRegistry.kt
composeApp/src/commonMain/kotlin/com/inumaki/chouten/dev/: DevClientManager.kt
composeApp/src/commonMain/kotlin/com/inumaki/chouten/navigation/: AppNavHost.kt  NavigationExtensions.kt  NavigationState.kt
composeApp/src/commonMain/kotlin/com/inumaki/chouten/navigation/overlay/: FullscreenOverlay.kt  SheetOverlay.kt  SheetScrim.kt
composeApp/src/commonMain/kotlin/com/inumaki/chouten/ui/: AppContainer.kt  AppRoot.kt  ChangelogScreen.kt  SplashScreen.kt
composeApp/src/iosMain/kotlin/com/inumaki/chouten/: GyroProvider.ios.kt  MainViewController.kt
composeApp/src/jvmMain/kotlin/com/inumaki/chouten/: main.kt
core/UI/: build.gradle.kts
core/UI/src/androidMain/kotlin/com/inumaki/core/ui/: DataStore.android.kt
core/UI/src/commonMain/kotlin/com/inumaki/core/ui/: AppScaffold.kt  DataStore.kt
core/UI/src/commonMain/kotlin/com/inumaki/core/ui/components/: AppBottomBar.kt  AppBottomBarItem.kt  AppButton.kt  AppImage.kt  AppImageButton.kt  AppTintedButton.kt  AppToggle.kt  AppTopBar.kt  ConcentricShape.kt  DampedDragAnimation.kt  DragGestureInspector.kt  PosterCard.kt  SharedElement.kt  SharedElementController.kt  SharedElementOverlay.kt
core/UI/src/commonMain/kotlin/com/inumaki/core/ui/model/: AppRoute.kt  AppSettings.kt  DevClient.kt  FeatureEntry.kt
core/UI/src/commonMain/kotlin/com/inumaki/core/ui/modifiers/: ShiningBorder.kt
core/UI/src/commonMain/kotlin/com/inumaki/core/ui/theme/: Theme.kt
core/UI/src/iosMain/kotlin/com.inumaki.core.ui/: DataStore.ios.kt
core/UI/src/jvmMain/kotlin/com/inumaki/core/ui/: DataStore.jvm.kt
core/repository/: build.gradle.kts
core/repository/src/androidMain/kotlin/dev.chouten.core.repository/: StartDevClient.android.kt
core/repository/src/commonMain/kotlin/dev.chouten.core.repository/: Platform.kt  RepositoryManager.kt  StartDevClient.kt
core/repository/src/iosMain/kotlin/dev.chouten.core.repository/: Platform.ios.kt  StartDevClient.ios.kt
core/repository/src/jvmMain/kotlin/dev.chouten.core.repository/: Platform.jvm.kt  StartDevClient.jvm.kt
features/Discover/: build.gradle.kts
features/Discover/src/commonMain/kotlin/com.inumaki.features.discover/: DiscoverEntry.kt  DiscoverView.kt  DiscoverViewModel.kt  DiscoverViewSuccess.kt
features/Discover/src/commonMain/kotlin/com.inumaki.features.discover/components/: CarouselCard.kt
features/Home/: build.gradle.kts
features/Home/src/commonMain/kotlin/com.inumaki.features.home/: HomeEntry.kt  HomeView.kt
features/Info/: build.gradle.kts
features/Info/src/commonMain/kotlin/dev.chouten.features.info/: InfoEntry.kt  InfoView.kt
features/Repo/: build.gradle.kts
features/Repo/src/commonMain/kotlin/com.inumaki.features.repo/: RepoEntry.kt  RepoView.kt
features/Settings/: build.gradle.kts
features/Settings/src/commonMain/kotlin/dev.chouten.features.settings/: SettingsEntry.kt  SettingsView.kt  SettingsViewModel.kt
gradle/: libs.versions.toml
iosApp/iosApp/: Info.plist  LaunchScreen.storyboard
iosApp/iosApp.xcodeproj/: project.pbxproj
runners/Relay/: build.gradle.kts
runners/Relay/src/androidMain/kotlin/dev.chouten.runners.relay/: NativeBridge.android.kt
runners/Relay/src/commonMain/kotlin/dev.chouten.runners.relay/: NativeBridge.kt  RelayRuntime.kt
runners/Relay/src/desktopMain/java/dev.chouten.runners.relay/: NativeBridge.desktop.kt
runners/Relay/src/iosMain/kotlin/dev.chouten.runners.relay/: NativeBridge.ios.kt
runners/Relay/src/main/: CMakeLists-ios.txt  CMakeLists.txt
runners/Relay/src/main/cmake/: ios.toolchain.cmake
runners/Relay/src/main/engine/: relay_host_functions.h  relay_host_html.cpp  relay_host_logging.cpp  relay_host_network.cpp  relay_native.cpp  relay_native.hpp
runners/Relay/src/main/include/: relay_c_api.h
runners/Relay/src/main/platform/ios/: ios_bridge.h  ios_bridge.mm
runners/Relay/src/main/platform/jni/: jni_bridge.cpp
runners/Relay/src/nativeInterop/cinterop/: relay.def
